# easy-sgr-doc

./: Cargo.toml  README.md
src/: main.rs
static/css/: styles.css
static/html/: index.html
static/root/: index.html  prism.css  prism.js  styles.css  test.css
