[package]
name = "easy-sgr-doc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
env_logger = "0.10.0"
log = "0.4.20"

shuttle-actix-web = "0.23.0"
shuttle-runtime = "0.23.0"
tokio = "1.26.0"