[package]
name = "easy-sgr-doc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
shuttle-axum = "0.23.0"
shuttle-runtime = "0.23.0"
shuttle-static-folder = "0.23.0"
tokio = "1.31.0"
tower-http = { version = "0.4.3", features = ["fs"] }